--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,26 @@
 /* font-family: 'Poppins', sans-serif; 
  font-family: 'Playfair Display', serif
 */
+
+/*//navbar css */
+.navbar{
+  font-family: 'Poppins', sans-serif  ;
+  font-size:  17px;
+  line-height: 26px;
+  text-transform: uppercase;
+  box-shadow: 0 8px -6px gray ;
+  border-bottom: solid gray !important;
+
+}
+.nav-link{
+  font-weight: 300;
+}
+
+.active{
+   border-bottom: 2px solid black;
+}
+.nav-brand{
+  font-weight: bold;
+  font-family: 'roboto',sans-serif  ;
+  letter-spacing: 3px;
+}
