add pages and ui update

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,3 +31,13 @@
   font-family: 'roboto',sans-serif  ;
   letter-spacing: 3px;
 }
+
+.footer a{
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+}
+.footer a:hover{
+  color: white;
+  border-bottom: 1px solid #ffefba ;
+}
