fix(style): add scss refrence update carousel hight

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,2 +1,4 @@
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
+@import "utils/mixins";
+@import "base/reset";
 @import "./utils/variables";
