--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,5 +1,7 @@
 @import "base/reset";
 @import "utils/variables";
+@import "components/categoryMenu";
+@import "components/carousel";
 
 // Global box-sizing for all elements
 *,
