--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,3 +2,5 @@
 @import "utils/mixins";
 @import "base/reset";
 @import "./utils/variables";
+@import "components/categoryMenu";
+@import "components/carousel";
