fix(aixos): fix axios instance for common base api

--- a/client/src/styles/components/_card.scss
+++ b/client/src/styles/components/_card.scss
@@ -1,4 +1,4 @@
-.card {
+.card-view {
   height: 100%; // Ensures the card takes up the full height for uniformity
   display: flex;
   flex-direction: column; // Make sure the content is stacked properly
@@ -11,6 +11,7 @@
   .card-body {
     flex-grow: 1; // Ensures the body grows to fill available space
     display: flex;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between; // Spreads out the content, keeping the button at the bottom
   }
