--- a/client/src/styles/utils/_mixins.scss
+++ b/client/src/styles/utils/_mixins.scss
@@ -1,3 +1,9 @@
 @mixin box-sizing {
   box-sizing: border-box;
 }
+
+@mixin center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
