--- a/client/src/styles/components/_card.scss
+++ b/client/src/styles/components/_card.scss
@@ -1,6 +1,4 @@
 .card-view {
-  display: flex;
-  flex-direction: column;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   &:hover {
     transform: scale(1.05);
@@ -9,6 +7,40 @@
 
   .card-image {
     height: 200px; // Set a fixed height for the image
+    object-fit: cover; // Makes the image cover the area without distortion
+  }
+
+  .product-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+
+  .product-description {
+    font-size: 0.9rem;
+    color: #6c757d;
+    margin-bottom: 1rem;
+  }
+
+  .product-footer {
+    margin-top: 10px;
+
+    .product-price {
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+  }
+}
+
+.card-view-horizontal {
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .card-image {
+    width: 150px; // Set a fixed width for the image
     object-fit: cover; // Makes the image cover the area without distortion
   }
 
