feat(testimonial): add testimonals feadback cads

--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -6,3 +6,7 @@ $bg-bc: #d0e1e7;
 .bg-secondary-color {
   background-color: $secondary-color !important;
 }
+
+.bg-primary-color {
+  background-color: $primary !important;
+}
