--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -6,5 +6,6 @@
 @import "components/card";
 @import "components/banner";
 @import "components/cardLayout";
+@import "components/testimonial";
 
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
