feat: add service info card

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "utils/mixins";
 @import "base/reset";
 @import "./utils/variables";
-@import "components/categoryMenu";
+@import "components/serviceinfocard";
 @import "components/carousel";
 @import "components/card";
 @import "components/banner";
