--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,5 +7,6 @@
 @import "components/banner";
 @import "components/cardLayout";
 @import "components/testimonial";
+@import "components/searchinput";
 
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
