style(navbar): update user and cart icon

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -8,5 +8,6 @@
 @import "components/cardLayout";
 @import "components/testimonial";
 @import "components/searchinput";
+@import "components/headers";
 
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
