--- a/client/src/styles/components/_banner.scss
+++ b/client/src/styles/components/_banner.scss
@@ -1,9 +1,17 @@
 .banner {
-  background: rgb(159, 211, 222);
-  background: linear-gradient(
-    90deg,
-    rgba(159, 211, 222, 1) 86%,
-    rgba(200, 218, 224, 1) 100%
-  );
-  min-height: 300px;
+}
+
+.image-banner {
+  width: 100%; /* Full width of the container */
+  max-height: 300px; /* Maximum height of the banner */
+  overflow: hidden; /* Crop any overflowing parts of the image */
+  display: flex; /* For centering content if needed */
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
+}
+
+.banner-image {
+  width: 100%; /* Scale the image to the full width of the container */
+  height: auto; /* Maintain the aspect ratio */
+  object-fit: cover;
 }
