style: update carousel design changes

--- a/client/src/styles/components/_headers.scss
+++ b/client/src/styles/components/_headers.scss
@@ -25,3 +25,8 @@
   width: 1.5em;
   height: 1.5em;
 }
+.nav-bar {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+}
