--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -9,5 +9,6 @@
 @import "components/testimonial";
 @import "components/searchinput";
 @import "components/headers";
+@import "global";
 
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
