--- a/client/src/styles/components/_carousel.scss
+++ b/client/src/styles/components/_carousel.scss
@@ -2,3 +2,8 @@
   height: 50vh;
   object-fit: cover;
 }
+.carousel-1 {
+  font-family: Poppins, sans-serif;
+  font-size: 4rem;
+  font-weight: 600;
+}
