--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "components/testimonial";
 @import "components/searchinput";
 @import "components/headers";
+@import "components/footer";
 @import "global";
 
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
