--- a/client/src/styles/components/_searchinput.scss
+++ b/client/src/styles/components/_searchinput.scss
@@ -3,6 +3,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Search form */
