style: remove AuthStyles.css and integrate styles into main.scss

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "components/searchinput";
 @import "components/headers";
 @import "components/footer";
+@import "components/authStyles";
 @import "global";
 
 @import "~bootstrap/scss/bootstrap"; // Bootstrap SCSS
