fix: herf update to navlink

--- a/client/src/styles/components/_headers.scss
+++ b/client/src/styles/components/_headers.scss
@@ -30,3 +30,9 @@
   font-size: 14px;
   font-weight: 600;
 }
+.nav-style {
+  text-decoration: none;
+  color: black;
+  padding: 0.5em 1em;
+  transition: color 0.3s ease;
+}
